--- a/404.md
+++ b/404.md
@@ -1,2 +1,2 @@
 Oh no, you didn't find anything here.
-Click [here](/) to see the list)
+Click [here](https://tap1ton.boxcrittersmods.ga/) to see the list
